ch6/src/snapshots/ch6__tests__example_in_book.snap
---
source: ch6/src/lib.rs
expression: prog
---
extern rt_allocate, rt_initialize, rt_print_int, rt_print_newline, rt_rootstack_begin
section .text

    global _start
_start:
    push rbp
    mov rbp, rsp
    sub rsp, 8
    push rbx
    mov rdi, 65536
    mov rsi, 64
    call rt_initialize
    mov r15, rt_rootstack_begin
    mov qword [r15], 0
    add r15, 8
    mov rdi, 16
    mov rsi, r15
    call rt_allocate
    mov r11, rax
    mov qword [r11], 9
    mov qword [r11 + 8], 42
    mov qword [r15], r11
    mov rdi, 16
    mov rsi, r15
    call rt_allocate
    mov r11, rax
    mov qword [r11], 9
    mov rax, qword [r15]
    mov qword [r11 + 8], rax
    mov rbx, r11
    mov r11, rbx
    mov rbx, qword [r11 + 8]
    mov r11, rbx
    mov rbx, qword [r11 + 8]
    mov rdi, rbx
    call rt_print_int
    call rt_print_newline
    sub r15, 8
    pop rbx
    mov rsp, rbp
    pop rbp
    mov rax, 60
    mov rdi, 0
    syscall

